tests/toy/neg/001233_mutation.toylang
program a = { sleep; var a : bool } .
